--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>SOC&#179;</title>
     <meta name="description" content="Welcome to the official Social Soccer Society site of UNSW">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> -->
-     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body ng-app="unswsociApp">
     <header class="container">
@@ -25,8 +25,8 @@
           <nav class="amber">
             <!-- about us dropdown -->
             <ul id='aboutUsDropdown' class='dropdown-content indigo darken-4'>
-              <li ng-repeat="item in ['vision', 'history', 'executives', 'home fields']">
-                <a class="grey-text text-darken-2" ui-sref="about us.{{item}}">{{item | uppercase}}</a>
+              <li ng-repeat="item in ['vision', 'history', 'executives', 'home fields', 'life membership']">
+                <a class="grey-text" ui-sref="about us.{{item}}">{{item | uppercase}}</a>
               </li>
             </ul>
             <!-- sidenav for mobile view -->
@@ -37,8 +37,8 @@
                   <a class="collapsible-header">ABOUT US<i class="mdi-navigation-arrow-drop-down"></i></a>
                   <div class="collapsible-body indigo darken-4">
                     <ul>
-                      <li ng-repeat="item in ['vision', 'history', 'executives', 'home fields']">
-                        <a class="white-text" ui-sref="about us.{{item}}">{{item | uppercase}}</a>
+                      <li ng-repeat="item in ['vision', 'history', 'executives', 'home fields', 'life membership']">
+                        <a class="grey-text" ui-sref="about us.{{item}}">{{item | uppercase}}</a>
                       </li>
                     </ul>
                   </div>
@@ -88,7 +88,7 @@
                 <li><a class="grey-text text-darken-2" ui-sref="root.events">EVENTS</a></li>
                 <!-- contact us -->
                 <li><a class="grey-text text-darken-2" ui-sref="root.contact us">CONTACT US</a></li>
-                <!-- online store -->
+                <!-- the comp -->
                 <li><a class="grey-text text-darken-2" ui-sref="root.the comp">THE COMP</a></li>
               </ul>
             </div>
@@ -137,7 +137,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-          © 2015 UNSW SOCIAL SOCCER SOCIETY
+          © 2015 UNSW Social Soccer Society
         </div>
       </div>
     </footer>
